# MyCompiler

./: .gitignore  CMakeLists.txt  main.cpp  test.txt  test_code.dia  tokens
include/: abstract_syntax_tree.h  ast.h  automata.h  codegen.h  lexer.h  parser.h
src/: Lexer.cpp  Lexer.h  ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
test/: lexer_test.cpp
